reset with Minimal Mistakes

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,12 +1,9 @@
-# main links links
 main:
-  - title: Presentation
+  - title: "Presentation"
     url: /presentation/
-  - title: User manual
-    url: /manual/
-  - title: FAQ
-    url: /faq/
-  - title: Source
-    url: https://github.com/jacquetc/skribisto
-#- title: Theme Setup
-#  url: /theme-setup/
+  - title: "Download"
+    url: /download-en-us/
+  - title: "User manual"
+    url: /manual-en-us/
+  - title: "FAQ"
+    url: /faq-en-us/
