--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,8 +2,8 @@ main:
   - title: "Presentation"
     url: /presentation/
   - title: "Download"
-    url: /download-en-us/
+    url: /download-en-us.html
   - title: "User manual"
-    url: /manual-en-us/
+    url: /manual-en-us.html
   - title: "FAQ"
-    url: /faq-en-us/
+    url: /faq-en-us.html
